[tool.poetry]
name = "gitlab-all-activities"
version = "0.1.0"
description = ""
authors = ["Bogdan Gulowaty <b.gulowaty@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-gitlab = "^2.9.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
